--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 				<artifactId>spring-boot-starter-data-jpa</artifactId>
 				<version>${spring.boot.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.mysql</groupId>
+				<artifactId>mysql-connector-j</artifactId>
+				<version>9.1.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
