--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.format-sql=true
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
