--- a/lending-service/src/main/resources/application.properties
+++ b/lending-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 application.name=lending-service
-server.port=8083
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/lending_db
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.format-sql=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.open-in-view=false
